# modern-cpp-tricks

./: CMakeLists.txt  LICENSE
cpp_interview/cache_acc/: CMakeLists.txt  aosoa.cpp  basic_benchmark_test.cpp  fetch.cpp  loop_merging.cpp
cpp_interview/tbb/: CMakeLists.txt  task_partition.cpp  tbb_arena.cpp  tbb_basic_test.cpp  tbb_bench.cpp  tbb_divide_conquer.cpp  tbb_pipeline.cpp
src/: CMakeLists.txt  advanced_topic_2.cpp  cache_estimate.cpp  cpp_tmp_chapter2.hpp  cpp_tmp_chapter2_3.cpp  cpp_tmp_chapter2_3.hpp  cpp_tmp_chapter2_4.cpp  cpp_tmp_chapter2_5.cpp  my_function.h  my_shared_ptr.cpp  my_unique_ptr.h  odd_even.cpp  producer_consumer.cpp  queue.cpp  quick_sort.cpp  static_combinations.cpp  static_combinations_v2.cpp  static_combinations_v3.cpp  template_action.cpp  template_basic_features.cpp  template_basic_features.h  template_param_deduction.cpp  test_crtp_base.cpp  test_enable_if.cpp  test_is_detect.cpp  test_reference_wrapper.cpp  variadic_template.cpp
